Reached 100% test coverage, fixed getRequirements